template.txt
node : [eval]:6
No linha:1 caractere:1
+ node -e "
+ ~~~~~~~~~
    + CategoryInfo          : NotSpecified: ([eval]:6:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
const idx = src.indexOf('e.innerHTML += \');
                        ^^^^^^^^^^^^^^^^^^^^
Expected ',', got 'const'

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.11.1
